--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Toilets of Montreal</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>🚽 Toilets of Montreal</title>
+</head>
+
+<body>
+    <header>
+        <h1>Toilets of Montreal</h1>
+        <aside>lush with Creativity: Montreal's Discarded Toilets Celebrated in a Stunning Photography Collection</aside>
+    </header>
+        
+        <p>Toilets of Montreal is a collection of photographs of discarded toilets in public in Montreal, Canada. The book features over 100 photographs of toilets in a variety of settings, from busy subway stations to quiet parks. The photographs are accompanied by short essays that explore the history and culture of toilets en plein air in Montreal.</p>
+        <p>If you spot a toilet outside anywhere in the world, share it with <a href="mailto:korymath@gmail.com?subject=Submission for Toilets Everywhere">Kory by email</a> or at <a href="https://www.instagram.com/toiletsofmontreal/">@toiletsofmontreal on Instagram</a>.</p>
+    
+</body>
+</html>
