add image and fix spelling

--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>🚽 Toilets of Montreal</title>
-  <style>
-body { 
-    line-height: 1.4;
-    font-size: 16px;
-    padding: 0 10px;
-    margin: 50px auto;
-    max-width: 650px;
-}
+    <meta property="og:title" content="Toilets of Montreal" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.toiletsofmontreal.com" />
+    <meta property="og:image" content="http://www.toiletsofmontreal.com/toilets.jpg" />
+    <meta property="og:description"
+        content="Discover Montreal's discarded toilets through a stunning photography collection." />
+    <style>
+        body {
+            line-height: 1.4;
+            font-size: 16px;
+            padding: 0 10px;
+            margin: 50px auto;
+            max-width: 650px;
+        }
 
-body {
-    max-width:42em;
-    margin:15 auto;
-    margin-top:70px;
-}
-</style>
+        body {
+            max-width: 42em;
+            margin: 15 auto;
+            margin-top: 70px;
+        }
+    </style>
 </head>
 
 <body>
     <header>
         <h1>Toilets of Montreal</h1>
-        <aside>lush with Creativity: Montreal's Discarded Toilets Celebrated in a Stunning Photography Collection</aside>
+        <aside>Flush with Creativity: Montreal's Discarded Toilets Celebrated in a Stunning Photography Collection
+        </aside>
     </header>
-      <p>Toilets of Montreal is a collection of photographs of discarded toilets in public in Montreal, Canada. The book features over 100 photographs of toilets in a variety of settings, from busy subway stations to quiet parks. The photographs are accompanied by short essays that explore the history and culture of toilets en plein air in Montreal.</p>
-      <p>If you spot a toilet outside anywhere in the world, share it with <a href="mailto:korymath@gmail.com?subject=Submission for Toilets Everywhere">Kory by email</a> or at <a href="https://www.instagram.com/toiletsofmontreal/">@toiletsofmontreal on Instagram</a>.</p>
+    <p>Toilets of Montreal is a collection of photographs of discarded toilets in public in Montreal, Canada. The book
+        features over 100 photographs of toilets in a variety of settings, from busy subway stations to quiet parks. The
+        photographs are accompanied by short essays that explore the history and culture of toilets en plein air in
+        Montreal.</p>
+    <p>If you spot a toilet outside anywhere in the world, share it with <a
+            href="mailto:korymath@gmail.com?subject=Submission for Toilets Everywhere">Kory by email</a> or at <a
+            href="https://www.instagram.com/toiletsofmontreal/">@toiletsofmontreal on Instagram</a>.</p>
+
+    <img src="toilets.jpg" alt="Cover of Toilets of Montreal" style="width: 100%; max-width: 400px; margin: 20px auto;">
 </body>
+
 </html>
